--- a/index.html
+++ b/index.html
@@ -336,24 +336,41 @@
             }
             currentRoom = roomName;
 
-            // 1. 화면 전환
+            // 화면 전환 (채팅창 보이기)
             document.getElementById('list-area').style.display = 'none';
             document.getElementById('chat-area').style.display = 'flex';
 
-            // 2. 상단바 및 하단바 숨기기 (핵심)
+            // 상단 설정 버튼 및 하단 푸터 숨기기
             document.getElementById('footer-bar').style.display = 'none';
-            document.getElementById('main-settings-btn').style.display = 'none'; // 설정 버튼 숨김
-            document.getElementById('main-install-btn').style.display = 'none'; // 설치 버튼 숨김
+            document.getElementById('main-settings-btn').style.display = 'none';
+            document.getElementById('main-install-btn').style.display = 'none';
 
             document.getElementById('room-title').textContent = currentRoom;
+
+            // 메시지 영역 초기화 및 로딩 표시
             document.getElementById('messages').innerHTML = '<li id="loading-status" style="text-align:center; width:100%; color:gray;">메시지 로딩 중...</li>';
 
             socket.emit('join room', { room: roomName, name: userName });
         }
 
-        // 뒤로 가기나 새로고침 시 설정 버튼이 다시 보여야 하므로 goBack 수정
         function goBack() {
-            location.reload(); // 페이지를 새로고침하면 초기 상태(설정 버튼 보임)로 돌아갑니다.
+            // 1. 소켓 방 퇴장 신호 (서버 세션은 유지하되 방 목록으로)
+            socket.emit('leave room');
+
+            // 2. 화면 전환 (방 목록 보이기)
+            document.getElementById('list-area').style.display = 'flex';
+            document.getElementById('chat-area').style.display = 'none';
+
+            // 3. 메인 UI 복구 (설정 버튼, 푸터 다시 보이기)
+            document.getElementById('footer-bar').style.display = 'block';
+            document.getElementById('main-settings-btn').style.display = 'block';
+            if (deferredPrompt) {
+                document.getElementById('main-install-btn').style.display = 'block';
+            }
+
+            // 4. 채팅 기록 초기화 (나중에 다시 들어올 때 새로 로딩하기 위함)
+            document.getElementById('messages').innerHTML = '';
+            currentRoom = '';
         }
 
         function addMessage(data) {
