--- a/index.html
+++ b/index.html
@@ -334,43 +334,50 @@
                 if (!nick) return;
                 userName = nick;
             }
-            currentRoom = roomName;
 
-            // 화면 전환 (채팅창 보이기)
+            // 이미 이 방에 접속 중인 상태라면 화면만 전환
+            if (currentRoom === roomName) {
+                document.getElementById('list-area').style.display = 'none';
+                document.getElementById('chat-area').style.display = 'flex';
+                document.getElementById('footer-bar').style.display = 'none';
+                document.getElementById('main-settings-btn').style.display = 'none';
+                document.getElementById('main-install-btn').style.display = 'none';
+                return;
+            }
+
+            currentRoom = roomName;
             document.getElementById('list-area').style.display = 'none';
             document.getElementById('chat-area').style.display = 'flex';
-
-            // 상단 설정 버튼 및 하단 푸터 숨기기
             document.getElementById('footer-bar').style.display = 'none';
             document.getElementById('main-settings-btn').style.display = 'none';
             document.getElementById('main-install-btn').style.display = 'none';
 
             document.getElementById('room-title').textContent = currentRoom;
-
-            // 메시지 영역 초기화 및 로딩 표시
             document.getElementById('messages').innerHTML = '<li id="loading-status" style="text-align:center; width:100%; color:gray;">메시지 로딩 중...</li>';
 
             socket.emit('join room', { room: roomName, name: userName });
         }
 
         function goBack() {
-            // 1. 소켓 방 퇴장 신호 (서버 세션은 유지하되 방 목록으로)
-            socket.emit('leave room');
-
-            // 2. 화면 전환 (방 목록 보이기)
+            // 퇴장(leave room) 신호를 보내지 않고 화면만 전환합니다.
             document.getElementById('list-area').style.display = 'flex';
             document.getElementById('chat-area').style.display = 'none';
 
-            // 3. 메인 UI 복구 (설정 버튼, 푸터 다시 보이기)
+            // 메인 UI 복구
             document.getElementById('footer-bar').style.display = 'block';
             document.getElementById('main-settings-btn').style.display = 'block';
             if (deferredPrompt) {
                 document.getElementById('main-install-btn').style.display = 'block';
             }
+            // currentRoom은 유지합니다 (나중에 다시 들어올 때 입장 메시지 방지)
+        }
 
-            // 4. 채팅 기록 초기화 (나중에 다시 들어올 때 새로 로딩하기 위함)
-            document.getElementById('messages').innerHTML = '';
-            currentRoom = '';
+        function leaveChat() {
+            if (confirm("완전히 나갈까요? (대화방 퇴장)")) {
+                socket.emit('leave room'); // 여기서만 진짜 퇴장 신호를 보냅니다.
+                currentRoom = ''; // 참여 방 정보 초기화
+                location.reload(); // 초기 상태로 복구
+            }
         }
 
         function addMessage(data) {
@@ -444,7 +451,6 @@
         });
 
         function goBack() { location.reload(); }
-        function leaveChat() { if (confirm("완전히 나갈까요?")) location.reload(); }
         function createNewRoom() { const input = document.getElementById('new-room-input'); if (input.value.trim()) enterRoom(input.value.trim()); }
         function toggleSettings() { const m = document.getElementById('settings-modal'); m.style.display = m.style.display === 'none' ? 'block' : 'none'; }
         function changeTheme() { const t = document.getElementById('theme-select').value; document.body.classList.toggle('dark-mode', t === 'dark'); }
